# DALI

./: .clang-format  .clang-tidy-filter  .clang-tidy-filter.json  .flake8  .flake8.ag  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .style.yapf  Acknowledgements.txt  CMakeLists.txt  CONTRIBUTING.md  COPYRIGHT  Cargo.toml  DALI_DEPS_VERSION  DALI_EXTRA_VERSION  Docker_run_cuda  Dockerfile  Dockerfile.base  Dockerfile.build.aarch64-linux  Dockerfile.build.aarch64-qnx  Dockerfile.deps  Dockerfile.docs  Dockerfile_DALI_build_environment  Dockerfile_dali_tf  Doxyfile  README.md  README.rst  SECURITY.rst  STYLE_GUIDE.md  VERSION  a.py  b.py  bandit.yml  build.rs  build_docker_dali.sh  cspell.config.yaml  cspell.json  (+8 more)
dali/: CMakeLists.txt  api_helper.h  common.cc  common.h  common_cuda.h  error_handling.cc  error_handling.h
dali/aux/: CMakeLists.txt
dali/benchmark/: CMakeLists.txt  caffe2_alexnet_bench.cc  caffe_alexnet_bench.cc  cast_bench.cc  checkpointing_bench.cc  coin_flip_bench.cc  color_twist_bench.cc  copy_bench.cc  crop_bench.cc  crop_mirror_normalize_bench.cc  dali_bench.cc  dali_bench.h  decoder_bench.cc  displacement_cpu_bench.cc  file_reader_alexnet_bench.cc  file_reader_bench.cc  file_reader_fast_forward_bench.cc  flip_bench.cc  gaussian_blur_bench.cc  imgcodec_bench.py  ndll_bench.h  normal_distribution_gpu_bench.cc  one_hot_bench.cc  operator_bench.h  preemphasis_bench.cc  resnet50_bench.cc  resnet50_bench.py  resnet50_nvjpeg_bench.cc  slice_bench.cc  slice_cpu_kernel_bench.cc  slice_kernel_bench.cc  slice_kernel_bench.cu  thread_pool_bench.cc  transpose_bench.cc  transpose_bench.cpp  transpose_cpu_bench.cc  transpose_gpu_bench.cc  video_decoder_bench.cc  video_reader_bench.cc  warp_affine_bench.cc
dali/c_api/: CMakeLists.txt  c_api.cc  c_api.h  c_api_test.c  c_api_test.cc  c_api_test.cu  operator_trace_test.cc
dali/c_api_2/: CMakeLists.txt  c_api_internal_test.cc  checkpoint.h  data_objects.cc  data_objects.h  data_objects_test.cc  error_handling.cc  error_handling.h  init.cc  managed_handle.h  pipeline.cc  pipeline.h  pipeline_builder_test.cc  pipeline_outputs.cc  pipeline_outputs.h  pipeline_test.cc  pipeline_test_utils.h  ref_counting.h  test_utils.h  utils.h  validation.cc  validation.h
dali/core/: CMakeLists.txt  access_order.cc  access_order_test.cu  alloc_test.cc  bitmask_test.cc  boundary_test.cc  box_test.cc  byte_io.h  byte_io_test.cc  c_api_language_test.c  call_once_test.cc  common.cc  compare_test.cc  convert_cuda_test.cu  convert_test.cc  convert_test_static.h  cuda_event.cc  cuda_event_pool.cc  cuda_event_pool_test.cc  cuda_stream.cc  cuda_stream_pool.cc  cuda_stream_pool_test.cc  dali_core_test.cc  dev_buffer_test.cc  device_guard.cc  device_guard_test.cc  dummy.cc  dynlink_cuda.cc  dynlink_cufile.cc  dynlink_cufile.inl  dynlink_nvcomp.cc  endian_util_test.cc  error_handling.cc  error_test.cc  event_pool.cc  event_pool_test.cc  expand_dims_test.cc  fast_div_test.cu  float16_test.cu  format_test.cc  (+27 more)
dali/fuzzing/: CMakeLists.txt  README.md  dali_harness.h  image_decoder_target.cc  rn50_target.cc  simple_fuzzing.cc
dali/image/: CMakeLists.txt  bmp.cc  bmp.h  generic_image.cc  generic_image.h  image.cc  image.h  image_factory.cc  image_factory.h  jpeg.cc  jpeg.h  jpeg2k.cc  jpeg2k.h  jpeg_handle.cc  jpeg_handle.h  jpeg_mem.cc  jpeg_mem.h  jpeg_test.cc  jpeg_utils.h  png.cc  png.h  pnm.cc  pnm.h  tiff.cc  tiff.h  tiff_libtiff.cc  tiff_libtiff.h  tiff_libtiff_impl.cc  tiff_libtiff_impl.h  tiff_test.cc  transform.cc  transform.h  transform_test.cc.disable  webp.cc  webp.h
dali/imgcodec/: CMakeLists.txt  dali_imgcodec_test.cc  deferred_result.cc  future_decode_result_test.cc  future_decode_results.cc  image_codec.h  image_decoder.cc  image_decoder_test.cc  image_format.cc  image_format.h  image_format_test.cc  image_orientation.cc  image_source.cc  image_source_test.cc  init.cc  registry.h  registry_test.cc
dali/kernels/: CMakeLists.txt  alloc.cc  alloc.h  alloc_type.h  any.h  backend_tags.h  context.h  dali_kernel_test.cc  dev_array.h  dummy.cc  dummy.cu  dynamic_scratchpad.h  dynamic_scratchpad_test.cc  gpu_utils.h  kernel.cc  kernel.h  kernel_manager.cc  kernel_manager.h  kernel_params.h  kernel_req.h  kernel_traits.h  scratch.h  scratch_copy_impl.h  shape.h  shape_test.cc  span.h  static_switch.h  tensor_shape.h  tensor_shape_print.h  tensor_shape_str.h  tensor_shape_test.cc  tensor_test.cc  tensor_view.h  tensor_view_test.cc  tuple_helpers.h  type_tag.h  util.h
dali/npp/: CMakeLists.txt  npp.h  npp_wrap.cc
dali/nvimgcodec/: CMakeLists.txt  nvimgcodec_wrap.cc
dali/nvjpeg/: CMakeLists.txt  nvjpeg_wrap.cc
dali/operators/: CMakeLists.txt  arg_helper.h  argument.cc  argument.h  common.h  dali_operator_test.cc  direct_operator_call_test.cc  op_schema.cc  op_schema.h  op_schema_test.cc  op_spec.cc  op_spec.h  op_spec_test.cc  operator.cc  operator.h  operator_factory.h  operator_factory_test.cc  operator_test.cc  operators.cc  operators.h
dali/pipeline/: CMakeLists.txt  dummy.cc  graph_descr.cc  init.cc  init.h  op_graph.cc  op_graph.h  op_graph_test.cc  pipeline.cc  pipeline.h  pipeline_debug.cc  pipeline_debug.h  pipeline_output_desc.h  pipeline_params.h  pipeline_test.cc
dali/plugin/: CMakeLists.txt  copy.cu  copy.h  plugin_manager.cc  plugin_manager.h  plugin_manager_test.cc
dali/python/: CMakeLists.txt  MANIFEST.in  __init__.py.in  backend_impl.cc  bundle-wheel.sh  patcher.py  (+3 more)
dali_tf_plugin/: CMakeLists.txt  MANIFEST.in  build_dali_stub.sh  build_dali_tf.sh  build_in_custom_op_docker.sh  dali_compile_flags.py  dali_dataset.h  dali_dataset_op.cc  dali_helper.h  dali_shape_helper.h  dali_tf_plugin_install_tool.py  dali_tf_plugin_utils.py  daliop.cc  dbg.h  make_dali_tf_sdist.sh  setup.py.in  tf_helper.h  tfallocator.h
ndll/: CMakeLists.txt  allocator.h  batch.h  common.cc  common.h  error_handling.cc  error_handling.h  executor.h  operator.h  stage.h  stream_pool.h  types.h
plugins/: CMakeLists.txt  MANIFEST.in  __init__.py.in  common.cmake  generate_plugin_stubs.py  setup.py.in
(+6047 files in other folders)
